Upgraded Maven compiler settingsAdded minor formatting updates in `Textblocks.java`.